--- a/app/src/main/res/layout/got_house_row.xml
+++ b/app/src/main/res/layout/got_house_row.xml
@@ -2,7 +2,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="230dp">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
