--- a/app/src/main/res/layout/got_house_row.xml
+++ b/app/src/main/res/layout/got_house_row.xml
@@ -6,7 +6,7 @@
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:transitionName="@string/transition_shared_image" />
 
     <TextView
         android:id="@+id/tv_name"
