--- a/app/src/main/res/layout/photo_toolbar.xml
+++ b/app/src/main/res/layout/photo_toolbar.xml
@@ -23,6 +23,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:fitsSystemWindows="true"
+            android:transitionName="@string/transition_shared_image"
             app:layout_collapseMode="parallax" />
 
 
