--- a/app/src/main/res/layout/houses_list.xml
+++ b/app/src/main/res/layout/houses_list.xml
@@ -7,11 +7,11 @@
     tools:context="li.nibble.android.codingtest.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/houses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="li.nibble.android.codingtest.MainActivity"
-        tools:showIn="@layout/fragment_list"
+        tools:showIn="@layout/characters_list"
         />
 
     <android.support.v4.widget.ContentLoadingProgressBar
