--- a/app/src/main/res/layout/got_character_row.xml
+++ b/app/src/main/res/layout/got_character_row.xml
@@ -1,20 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/row_height">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/row_height">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="@string/transition_shared_image" />
+        android:transitionName="@string/transition_shared_character" />
 
     <View
         android:id="@+id/ivGradient"
         android:layout_width="match_parent"
         android:layout_height="@dimen/row_gradient_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/row_gradient"
-        />
+        android:background="@drawable/row_gradient" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -23,6 +22,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:textColor="@android:color/white"
-        />
+        android:textColor="@android:color/white" />
 </RelativeLayout>
