--- a/app/src/main/res/layout/got_house_row.xml
+++ b/app/src/main/res/layout/got_house_row.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="230dp">
+    android:layout_width="match_parent"
+    android:layout_height="230dp">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/ivBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="@string/transition_shared_image" />
+        android:transitionName="@string/transition_shared_house" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -15,6 +15,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:textColor="@android:color/white"
-        />
+        android:textColor="@android:color/white" />
 </RelativeLayout>
