--- a/app/src/main/res/layout/activity_house_detail.xml
+++ b/app/src/main/res/layout/activity_house_detail.xml
@@ -9,13 +9,10 @@
 
     <include layout="@layout/photo_toolbar" />
 
-    <GridView
-        android:id="@+id/grid"
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="0dp"
-        android:horizontalSpacing="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
 </android.support.design.widget.CoordinatorLayout>
