--- a/app/src/main/res/layout/houses_list.xml
+++ b/app/src/main/res/layout/houses_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,14 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="li.nibble.android.codingtest.MainActivity"
-        tools:showIn="@layout/characters_list"
-        />
+        tools:showIn="@layout/characters_list" />
 
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/pb"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
+        android:layout_centerInParent="true" />
 </RelativeLayout>
