--- a/app/src/main/res/layout/photo_toolbar.xml
+++ b/app/src/main/res/layout/photo_toolbar.xml
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:fitsSystemWindows="true"
-            android:transitionName="@string/transition_shared_image"
+            android:transitionName="@string/transition_shared_character"
             app:layout_collapseMode="parallax" />
 
 
@@ -31,6 +31,8 @@
             android:id="@+id/t"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:elevation="5dp"
+            android:minHeight="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_collapseMode="pin" />
 
